like button and visibility popup fixed

--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -11,6 +11,6 @@
  }
 
  .elements__like:hover {
-  background-image: url(../../../images/like_hover.svg);
+  opacity: 0.8;
   cursor: pointer;
  }
