--- a/blocks/image-popup/image-popup.css
+++ b/blocks/image-popup/image-popup.css
@@ -10,9 +10,10 @@
   align-items: center;
   z-index: 1;
   opacity: 0;
-  -webkit-transition: visibility 0s, opacity 0.5s linear;
-  -moz-transition: visibility 0s, opacity 0.5s linear;
-  -o-transition: visibility 0s, opacity 0.5s linear;
+  -webkit-transition: visibility 0.5s, opacity 0.5s linear;
+  -moz-transition: visibility 0.5s, opacity 0.5s linear;
+  -o-transition: visibility 0.5s, opacity 0.5s linear;
+  display: flex;
 }
 
 .image-popup::after {
