--- a/blocks/popup-add-image/popup-add-image.css
+++ b/blocks/popup-add-image/popup-add-image.css
@@ -9,9 +9,10 @@
   justify-content: center;
   align-items: center;
   opacity: 0;
-  -webkit-transition: visibility 0s, opacity 0.5s linear;
-  -moz-transition: visibility 0s, opacity 0.5s linear;
-  -o-transition: visibility 0s, opacity 0.5s linear;
+  -webkit-transition: visibility 0.5s, opacity 0.5s linear;
+  -moz-transition: visibility 0.5s, opacity 0.5s linear;
+  -o-transition: visibility 0.5s, opacity 0.5s linear;
+  display: flex;
 }
 
 .popup-add-image::after {
